fix: jdk 1.8 issue